GeneWeb version 3.04
--------------------

* Languages
  - [06 Apr 00] Added Afrikaans (Louis Kruger).

* GeneWeb Service/CGI (gwd)
  - [14 Apr 00] Fixed bug: could no more access a person by his key after
    having changed his name, in the case when the initial first name or
    surname was a question marks *and* the changed name had nevertheless
    the same signature.
    Example:
       before: first name = "John Smith"; surname = "?"
        after: first name = "John"; surname = "Smith"
    When doing this fix, there were no more way to access "John Smith" by
    his key, particularly in forms (which is rather annoying).
  - [13 Apr 00] Added nice display of language code when mouse over the
    flag (Emmanuelle Visseaux's code).
  - [11 Aor 00] Added optional displaying of images in descendants by tree
    and in relationship trees.
  - [03 Apr 00] In ancestor page, added horizontal displaying.
  - [02 Apr 00] In surname page, added ability to click on a branch number
    to display only that one.
  - [27 Mar, 05 Apr 00] Added displaying of places/surnames from welcome page.

* Setup program (gwsetup)
  - [09 Apr 00] Fixed some bugs in Linux rpm package causing gwsetup to
    fail and the browser to answer "no output".

* Gedcom to GeneWeb (ged2gwb)
  - [11 Apr 00] Fixed bug+problem of adoptive children when they are also
    recorded as normal children of their adoptive parents in the GEDCOM
    (extracted from a genealogical software having a different logic than
    GeneWeb about this subject). The "bug" made the adoptive links not
    appear, the "problem" made the parents family not appear.
  - [31 Mar 00] Do not enter any more GIVN as public name if equal to first
    name nor SURN as surname alias if equal to surname.

* GeneWeb uncompiler (gwu) and GeneWeb to gedcom (gwb2ged)
  - [04 Apr 00] Added option "-nn" not to save data base notes.

* Base configuration files (base.gwf)